# IOccultCalc

./: CMakeLists.txt  README.md  compare_orbfit.sh  compare_orbfit.sh.bak  demo_comparison.txt  demo_iota_prediction.txt  demo_preston_format.txt  test_frame_comparison.cpp  test_frame_mismatch  test_frame_mismatch.cpp  test_horizons_center  test_horizons_center.cpp  test_horizons_coordinates.py  test_horizons_only.cpp  test_horizons_vs_spk.cpp  test_initial_state_sensitivity  test_initial_state_sensitivity.cpp  test_jpl659_propagation.cpp  test_perturbation_contributions  test_perturbation_contributions.cpp  test_recent_elements.cpp  test_vector_comparison  test_vector_comparison.cpp
docs/: AST17_IMPLEMENTATION.md  FORCE_MODEL.md  HERGET_BUG_ANALYSIS.md  INITIAL_ORBIT_STATUS.md  NBODY_IMPLEMENTATION_SUMMARY.md  ORBFIT_INTEGRATION.md  ORBIT_DETERMINATION_IMPLEMENTATION.md  PRECISION_ANALYSIS.md  PRECISION_ROADMAP.md  README_CONFRONTO.md  STEPSIZE_ANALYSIS.md  confronto_occultazioni.tex  mappe_occultazioni.tex
docs/manual/: README_OVERLEAF.txt
docs/manual_it/: README.md  main.aux  main.blg  main.lof  main.lot  main.tex  main.toc
docs/manual_it/chapters/: 01_introduzione.aux  01_introduzione.tex  02_sistemi_coordinate.aux  03_sistemi_temporali.aux  04_effemeridi_planetarie.aux  05_meccanica_orbitale.aux  06_integrazione_numerica.aux  07_perturbazioni.aux  08_correzioni_relativistiche.aux  09_precessione_nutazione.aux  10_astrometria_stellare.aux  11_determinazione_orbite.aux  12_forma_asteroidi.aux  13_metodo_besseliano.aux  14_propagazione_incertezze.aux  15_implementazione.aux  16_validazione.aux  appendice_a_costanti.aux  appendice_b_algoritmi.aux  appendice_c_jpl_tables.aux
examples/: CMakeLists.txt  advanced_propagation_example.cpp  debug_herget_inclination.cpp  occult4_xml_example.cpp  test_ast17_availability.cpp  test_astdys_fit_propagate.cpp  test_astdys_vs_orbfit.cpp  test_asteroid_perturb.cpp  test_asteroid_perturbations.cpp  test_barycentric_heliocentric.cpp  test_coordinates_debug.cpp  test_eros_complete.cpp  test_eros_rwo.cpp  test_frame_conversion.cpp  test_frame_roundtrip.cpp  test_herget_debug.cpp  test_iers.cpp  test_initial_orbit.cpp  test_initial_state_eros.cpp  test_jpl659_short.cpp  test_lambert.cpp  test_orbfit.cpp  test_orbfit_backward.cpp  test_orbfit_comparison.cpp  test_orbfit_fitted_elements.cpp  test_perturbation_debug.cpp  test_pompeia_precision.cpp  test_propagator_validation.cpp  test_relativity.cpp  test_rk4_three_body.cpp  test_stepsize_optimization.cpp
include/ioccultcalc/: coordinates.h  force_model.h  iers_data.h  initial_orbit.h  numerical_integrator.h  observation.h  occult4_xml.h  orbfit_wrapper.h  orbit_propagator.h  orbital_elements.h  time_utils.h  types.h
src/: coordinates.cpp  ephemeris.cpp  force_model.cpp  iers_data.cpp  initial_orbit.cpp  occult4_xml.cpp  orbfit_c_wrapper.f90  orbfit_wrapper.cpp  orbit_fitter.cpp  orbit_propagator.cpp  orbital_elements.cpp  ra15_integrator.cpp  spice_spk_reader.cpp  time_utils.cpp
